--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -129,8 +129,6 @@ dist
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
-<<<<<<< HEAD
 .pnp.*
-=======
-.pnp.*
->>>>>>> dc0b33531f2b29641f15b161ee23244c8486d4e3
+
+backend/config/db.js
